--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,1 @@
-<resources>
-    <string name="app_name">example</string>
-</resources>
+<resources>    <string name="app_name">example</string></resources>
