added more docs and fixed website bugs

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -21,6 +21,10 @@
         "title": "isSensorAvailable",
         "sidebar_label": "isSensorAvailable"
       },
+      "overview": {
+        "title": "Overview",
+        "sidebar_label": "Overview"
+      },
       "setItem": {
         "title": "setItem",
         "sidebar_label": "setItem"
